# experiments

./: LICENSE  README.md  main.cpp  maxSumPartition.cpp  test.cpp
trie/: CMakeLists.txt  trie.hpp  trie_gtest.cpp
